plugins {
    id 'org.jetbrains.kotlin.jvm'
    id 'maven-publish'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility JavaVersion.VERSION_17
}


test {
    jvmArgs += [
            '--add-opens=java.base/java.util.stream=ALL-UNNAMED',
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED',
    ]
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            groupId = 'com.justnothing'
            artifactId = 'richconsole'
            version = '1.0.0'
        }
    }
}

tasks.register('fatJar', Jar) {
    archiveBaseName = 'engine-fat'
    archiveExtension = 'jar'
    manifest {
        attributes 'Main-Class': 'com.justnothing.richconsole.Main'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

dependencies {
    implementation libs.jline.reader
    implementation libs.jline.terminal
    implementation libs.jline.terminal.jni
    implementation libs.jline.native
    implementation libs.jline.console
    implementation libs.jline.console.ui
    implementation libs.jline.builtins
    implementation libs.kotlinx.coroutines.core
    testImplementation libs.kotlin.test
}

kotlin {
    jvmToolchain(17)
}